finalize introduction to data scientist project

--- a/23_projet_data_scientist/introduction/presentation-projet.tex
+++ b/23_projet_data_scientist/introduction/presentation-projet.tex
@@ -80,30 +80,50 @@ suffisant pour récupérer les edges des batiments et autres structures, c'est p
 satellitaires à l'exploitation des images couleur de Google Earth.\\
 Les figures \ref{band2},\ref{band3},\ref{band4} présentent respectivement les bandes 2,3 et 4 d'un dataset que nous
 avons pu télécharger depuis \cite{landsat8}, et pris autour de la ville
-de \begin{itshape}Grenada (Espagne)\end{itshape}
+de \begin{itshape}Paris (France)\end{itshape}. Ces bandes sont respectivement les bandes visible du rouge, du vert et du bleu.\\
+La figure \ref{color} presente la combinaison de ces trois bandes, et donc l'image couleur resultante (ainsi qu'un zoom autour de l'\begin{itshape}Ile-de-France\end{itshape}.\\
+La figure \ref{vegetation} presente la combinaison des trois bandes 6,5,4 qui permet l'analyse de la végétation.\\
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.8]{LC82000342015021LGN00_B2r.jpg}
+\includegraphics[scale=0.8]{LC81990262015158LGN00_B2r.jpg}
 \end{center}
-\caption{image Lansat-8 (bande 2), région autour de $Grenada$ $(Espagne)$}
+\caption{image Lansat-8 (bande 2), région autour de $Paris$ $(France)$}
 \label{band2}
 \end{figure}
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.8]{LC82000342015021LGN00_B3r.jpg}
+\includegraphics[scale=0.8]{LC81990262015158LGN00_B3r.jpg}
 \end{center}
-\caption{image Lansat-8 (bande 3), région autour de $Grenada$ $(Espagne)$}
+\caption{image Lansat-8 (bande 3), région autour de $Paris$ $(France)$}
 \label{band3}
 \end{figure}
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.8]{LC82000342015021LGN00_B4r.jpg}
+\includegraphics[scale=0.8]{LC81990262015158LGN00_B4r.jpg}
 \end{center}
-\caption{image Lansat-8 (bande 4), région autour de $Grenada$ $(Espagne)$}
+\caption{image Lansat-8 (bande 4), région autour de $Paris$ $(France)$}
 \label{band4}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.8]{LC81990262015158LGN00_color.jpg}
+\includegraphics[scale=0.35]{LC81990262015158LGN00_color_idf.jpg}
+\end{center}
+\caption{image couleur Lansat-8 (bandes 4,3,2), région autour de $Paris$ $(France)$}
+\label{color}
+\end{figure}
+
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.8]{LC81990262015158LGN00_vegetal.jpg}
+\end{center}
+\caption{image végétale Lansat-8 (bandes 6,5,4), région autour de $Paris$ $(France)$}
+\label{vegetation}
 \end{figure}
 
 \clearpage
