update pre-processing report

--- a/25_projet_data_scientist/1_pre-processing/biblio.bib
+++ b/25_projet_data_scientist/1_pre-processing/biblio.bib
@@ -233,3 +233,8 @@ wiki:utm,
         year = {2012},
         url = {https://github.com/gina-alaska/dans-gdal-scripts}
 }
+@misc{sql-data,
+	title = "Liste des villes de France en SQL, CSV ou XML",
+	year = {2012},
+	url = {http://sql.sh/736-base-donnees-villes-francaises}
+}
