--- a/25_projet_data_scientist/1_pre-processing/pre-processing-projet.tex
+++ b/25_projet_data_scientist/1_pre-processing/pre-processing-projet.tex
@@ -147,7 +147,7 @@ les latitudes (espacées de 8 degrés) \ref{utm}.
 Pour une zone donnée, les couples ($latitude$,$longitude$) sont projetés en tenant compte de l'aspect ellipsoidal local de la terre 
 (la convention $WGS84$ définie les dimensions de l'ellipse).\\
 Les coordonnées ($x$,$y$) obtenues sont en mètres par rapport à une origine virtuelle différente pour chaque zone. De ce fait, la distance
-entre un point d'une zone et un point d'une autre zone n'a aucun sens et chaque zone a son propre système de projection.\\
+entre un point ($x_{1}$,$y_{1}$) d'une zone et un point ($x_{2}$,$y_{2}$) d'une autre zone n'a aucun sens et chaque zone a son propre système de projection.\\
 Cette distance a cependant un sens si toutes les cordonnées ($longitude$,$latitude$) sont converties en coordonnées ($x$,$y$) suivant
 le système de projection d'une même zone donnée, aux effets de distorsion prêt.\\
 C'est cette simplification que nous allons adopter : pour chaque territoire, on utilisera le système de projection de la zone centrale.
@@ -271,10 +271,8 @@ Vegetation Analysis & 6 , 5 , 4\\
 
 Ces bandes couvrent approximativement un périmètre de 185km dans la direction Nord-Sud et 185km
 dans la direction Est-Ouest, pour une résolution de 30 mètres (soit des images d'environ 8000 sur 8000 pixels).\\
-La figure \ref{color} presente la combinaison des bandes Rouge, Verte et Bleue, et donc l'image couleur resultante 
-(ainsi qu'un zoom autour de \begin{itshape}Paris\end{itshape}).\\
-La figure \ref{vegetation} presente la combinaison des trois bandes 6,5,4 qui permet l'analyse de la végétation.\\
-
+La figure \ref{color_paris} presente la combinaison des bandes 4,3,2 qui permet d'avoir l'image couleur, pour le dataset incluant Paris et pour un zoom autour de $Paris$.\\
+La figure \ref{urban} presente la combinaison des trois bandes 7,6,4 qui permet l'analyse urbaine, pour des zooms autour de $Paris$, $Versailes$ et $Fontainebleau$.\\
 
 \begin{figure}[H]
 \begin{center}
@@ -282,16 +280,17 @@ La figure \ref{vegetation} presente la combinaison des trois bandes 6,5,4 qui pe
 \includegraphics[scale=0.5]{images/paris_rgb_zoom.png}
 \end{center}
 \caption{Image couleur Lansat-8 (bandes 4,3,2), région autour de $Paris$ $(France)$ + zoom}
-\label{color}
+\label{color_paris}
 \end{figure}
-
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.3]{images/paris_vegetal_zoom_pansharpened.png}
+\includegraphics[scale=0.28]{images/paris_urban_zoom_pansharpened.png}
+\includegraphics[scale=0.28]{images/versailles_urban_zoom_pansharpened.png}
+\includegraphics[scale=0.28]{images/fontainebleau_urban_zoom_pansharpened.png}
 \end{center}
-\caption{Image végétale Lansat-8 (bandes 6,5,4), région autour de $Paris$ $(France)$}
-\label{vegetation}
+\caption{Image urbaine Lansat-8 (bandes 7,6,4) après pan-sharpening, régions autour de $Paris$, $Versailles$ et $Fontainebleau$ $(France)$ sur une même zone de 700x1100km.}
+\label{urban}
 \end{figure}
 
 \clearpage
@@ -300,7 +299,7 @@ La figure \ref{vegetation} presente la combinaison des trois bandes 6,5,4 qui pe
 
 Parmi les 11 bandes, la bande 8 est la seule présentant une résolution de 15m au lieu de 30m. Elle est utilisé pour améliorer la résolution
 des combinaisons de bandes: c'est le \begin{itshape}pan-sharpening\end{itshape}.\\
-Ainsi la figure \ref{pan_sharpen} montre la différence entre l'image couleur à 30m de résolution et cella à 15m obtenue par \begin{itshape}pan-sharpening\end{itshape}.
+Ainsi la figure \ref{pan_sharpen} montre la différence entre l'image couleur à 30m de résolution et celle à 15m obtenue par \begin{itshape}pan-sharpening\end{itshape}.
 Pour calculer cette image, on utilise le package Linux \begin{itshape}landsat-util\end{itshape} \cite{dans-gdal}.
 
 \begin{figure}[H]
@@ -319,7 +318,52 @@ Pour calculer cette image, on utilise le package Linux \begin{itshape}landsat-ut
 On est donc en mesure de pré-traiter les données d'un territoire donné, par combinaison de bandes puis \begin{itshape}pan-sharpening\end{itshape}.\\
 Il s'agit à présent de récupérer un fichier renseignant la densité de population en différents points de ce territoire, chacun 
 de ces points étant repéré par un couple ($longitude$,$latitude$).\\
-On effectue alors la projection $UTM$ (comme décrit plus haut) de chacun de ces points, pour pouvoir récupérer l'image Landsat-8
+Ainsi, on peut récupérer auprès de \cite{sql-data}, un fichier csv de près de 36000 communes renseignant pour chacune d'elle la densité de population de 2012 (habs/m2), la 
+longitude et la latitude, entre autres \ref{densite}.
+
+\begin{table}
+\begin{center}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Nom&densité en 2012 (habs/m2) &longitude (degrés)&latitude (degrés)\\
+\hline
+OZAN&93&4.91667&46.3833\\
+\hline
+CORMORANCHE-SUR-SAONE&107&4.83333&46.2333\\
+\hline
+PLAGNE&20&5.73333&46.1833\\
+\hline
+TOSSIAT&138&5.31667&46.1333\\
+\hline
+POUILLAT&14&5.43333&46.3333\\
+\hline
+TORCIEU&65&5.4&45.9167\\
+\hline
+REPLONGES&210&4.88333&46.3\\
+\hline
+..&..&..&..\\
+\hline
+\end{tabular}
+\end{center}
+\caption{Tableau de données de densité ($2012$) pour diverses communes françaises}
+\label{densite}
+\end{table}
+
+\clearpage
+
+On effectue alors la projection $UTM$ (comme décrit plus haut) de chacun de ces points, pour obtenir une carte de densité de population \ref{densite_france}.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.2]{images/density_france.png}
+\end{center}
+\caption{Densité du territoire $France$ en habs/m2}
+\label{densite_france}
+\end{figure}
+
+\clearpage
+
+A partir de chacun de ces points, on va alors pouvoir récupérer l'image Landsat-8
 correspondante et ouvrir une fenêtre autour du point (patch).\\
 Nous aurions donc un ensemble de couples ($patch$,\begin{itshape}valeur de densité\end{itshape}) en vue d'une classification supervisée.\\
 Il reste donc maintenant à extraire un vecteur descripteur pertinent à partir de chaque patch, chaque patch existant sous forme de multiple combinaisons
