finalize pre-processing latex report

--- a/25_projet_data_scientist/1_pre-processing/pre-processing-projet.tex
+++ b/25_projet_data_scientist/1_pre-processing/pre-processing-projet.tex
@@ -289,7 +289,7 @@ La figure \ref{urban} presente la combinaison des trois bandes 7,6,4 qui permet 
 \includegraphics[scale=0.28]{images/versailles_urban_zoom_pansharpened.png}
 \includegraphics[scale=0.28]{images/fontainebleau_urban_zoom_pansharpened.png}
 \end{center}
-\caption{Image urbaine Lansat-8 (bandes 7,6,4) après pan-sharpening, régions autour de $Paris$, $Versailles$ et $Fontainebleau$ $(France)$ sur une même zone de 700x1100km.}
+\caption{Image urbaine Lansat-8 (bandes 7,6,4) après pan-sharpening, régions autour de $Paris$, $Versailles$ et $Fontainebleau$ $(France)$ sur une même zone de 700x1100 pixels soit 10,5x16.5km.}
 \label{urban}
 \end{figure}
 
