add georeferencing latex report

--- a/25_projet_data_scientist/2_georeferencing/georeferencing.tex
+++ b/25_projet_data_scientist/2_georeferencing/georeferencing.tex
@@ -213,11 +213,12 @@ couleur  \ref{Thonon-landsat}.
 \end{figure}
 
 On peut alors charger cette image dans la fenêtre principale $QGIS$ via l'onglet \og Couche > Ajouter une couche > Ajouter une couche 
-raster \fg{}. On peut alors observer la superposition des deux rasters en réglant leur transparence (sous(fen\^{e}tre \og couches \fg{}) 
+raster \fg{}. On peut alors observer la superposition des deux rasters et même régler leur transparence (sous(fen\^{e}tre \og couches \fg{}) 
 dans la fen\^{e}tre principale $QGIS$) \ref{qgis_super}
 
 \begin{figure}[H]
 \begin{center}
+\includegraphics[scale=0.3]{images/qgis-superposition0.png}
 \includegraphics[scale=0.3]{images/qgis-superposition.png}
 \end{center}
 \caption{Projet $QGIS$ et superposition des rasters IGN et Landsat-8 géoréférencés en EPSG:32621 - commune de Thonon-Les-Bains}
