--- a/24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.tex
+++ b/24_apprentissage_distribue_et_fouille_de_graphes-part2/Exam/report.tex
@@ -32,7 +32,7 @@ CES Data Scientist - PageRank Exam}
 
 \begin{description} % listes descriptives
 
-\item[Exercise 1 :] We expose here after the system of linear equations that solve PageRank scores associated to graph $G$ ($r_{i}$ being PageRank score for page $i$):
+\item[Exercise 1 :] We expose here after the system of linear equations that solves PageRank scores associated to graph $G$ ($r_{i}$ being PageRank score for page $i$):
 
 \begin{eqnarray*} % systeme d'equation
 r_1 &=& r_4\\
@@ -67,9 +67,55 @@ In this file, each line represents a page indice and the page indices it links t
 3 4\\
 4 1\\
 
-\item[Exercise 2 :] bestiole qui fait bloub.
-\item[Exercise 3 :] bestiole qui fait rire.
-\item[Exercise 4 :] bestiole qui fait mal.
+We have run our python map/reduce implementation of PageRank. We use a teleport coefficient of $0.75$, and an error criteria of $0.01$. Figure \ref{mapreduce} shows correspoding standard output with 
+PageRank scores results at the end.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.2]{images/mapreduce.png}
+\end{center}
+\caption{Python map/reduce for PageRank scores associated to graph $G$}
+\label{mapreduce}
+\end{figure}
+
+\clearpage
+
+\item[Exercise 2 :] Suppose we have a file containing integers with theirs indices as follow :\\
+
+$i$ $n$\\
+0 256 \\
+1 35\\
+2 4122\\
+3 96\\
+...\\
+
+We present here after a pseudo-code for map/reduce function to find maximum value of this list of integers :\\
+
+\begin{verbatim}
+map(key=i,value=n)
+{
+  return 0,n
+}
+
+reduce(key,values) // values is an array containing all the integers because 
+{                  // map has emitted each of them with the same key (0).
+  MAX = MIN_POSSIBLE_VALUE
+  for n in values
+  {
+    if n>max
+    {
+      max = n
+    }
+  }
+  return 0,max
+}
+\end{verbatim}
+\\
+\item[Exercise 3 :] 
+
+The keyword \begin{itshape}yield\end{itshape} is very useful to read data that are too big to fit in memory (RAM). Thus, we read those data directly from hard disk piece by piece.
+For example, one can read a big .csv file line by line (or lines block by lines block). So, not all the data are in memory but only a piece at once. 
+\item[Exercise 4 :] 
 
 \end{description}
 
