add progress to ndvi latex report

--- a/25_projet_data_scientist/3_ndvi/ndvi.tex
+++ b/25_projet_data_scientist/3_ndvi/ndvi.tex
@@ -246,7 +246,7 @@ site de l'organisme public :\\
 
 \Large{
 La nouvelle typologie de l’Insee s’inspire de la classification européenne urbain-rural conçue à partir des données carroyées de population. 
-Elle permet de définir 3 types d’espace :
+Elle permet de définir 3 types d’espace :\\
 
 \begin{itemize}
 \item \emph{les communes densément peuplées} : dont la densité de population au carreau est d’au moins 1 500 habitants par km\textsuperscript{2} 
@@ -264,6 +264,18 @@ Avec cette typologie, 90 \% des communes françaises sont « rurales ». L’Ins
 
 \end{quotation}
 
+%Paris 21288
+%Versailles 3289
+%Fontainebleau 89
+%Melun 4924
+%Albertville 1076
+%Annecy 3690
+%Chambéry 2731
+%Chamonix-Mont-Blanc 76
+%Bourg-en-Bresse 1680
+%Lyon 10117
+%Thonon-les-Bains 2092
+%Montpellier 4524
 \backmatter
 
 \listoftables
