add progress to ndvi latex report

--- a/25_projet_data_scientist/3_ndvi/ndvi.tex
+++ b/25_projet_data_scientist/3_ndvi/ndvi.tex
@@ -77,7 +77,7 @@ La figure \ref{chamonix_ndvi} montre un $NDVI$ négatif au sud de la commune de 
 \end{figure}
 
 La figure \ref{manaus_ndvi} montre un $NDVI$ supérieur à $0.5$ autour de la ville de Manaus au Brésil, ce qui correspond à la végétation dense de la for\^et amazonienne. Le fleuve
-du \begin{itshape}Rio Negro\end{itshape} apparait lui en négatif\\
+du \begin{itshape}Rio Negro\end{itshape} apparait lui en négatif.\\
 
 \clearpage
 
@@ -94,7 +94,7 @@ du \begin{itshape}Rio Negro\end{itshape} apparait lui en négatif\\
 \label{paris_ndvi}
 \end{figure}
 
-La figure \ref{paris_ndvi} montre un $NDVI$ quasi nulle donc sans végétation, comme on peut s'y attendre dans une commune urbaine telle que Paris en période hivernale\\
+La figure \ref{paris_ndvi} montre un $NDVI$ quasi nulle donc sans végétation, comme on peut s'y attendre dans une commune urbaine telle que Paris en période hivernale.\\
 
 \clearpage
 
@@ -109,7 +109,7 @@ Pour cela, nous allons étudier quatre types de communes selon leur paysage : ur
 
 La figure \ref{paris_ndvi_annee} montre l'évolution du $NDVI$ sur $10$ mois pour la ville de $Paris$. On note un étalement de la distribution 
 dans les mois chauds d\^u à la vigueur des espaces verts à cette époque de l'année. Cépendant, même s'il s'éloigne de 0, le mode principal 
-demeure toujours à basse fréquence.
+demeure toujours à basse fréquence ($0.05$).
 
 \begin{figure}[H]
 \centerline{
@@ -150,8 +150,8 @@ En bas, supersposition des histogrammes de $NDVI$ pour les mois de $Mars$ à $De
 
 \section{Pour une commune plainière (Fontainebleau)}
 
-Pour une commune planière comme $Fontainebleau$ \ref{fontainebleau_ndvi_annee}, l'étalement de la distribution est beaucoup plus franc et déplace même
-le mode principale vers les hautes fréquences ($0.5$).
+Pour une commune plainière comme $Fontainebleau$ \ref{fontainebleau_ndvi_annee}, l'étalement de la distribution est beaucoup plus franc et déplace même
+le mode principal vers les hautes fréquences ($0.5$).
  
 \begin{figure}[H]
 \centerline{
@@ -184,7 +184,7 @@ le mode principale vers les hautes fréquences ($0.5$).
 \end{center}
 \caption{De la gauche vers la droite sur la première ligne, évolution du $NDVI$ entre $Mars$ et $Juillet$ pour la ville de $Fontainebleau$ sur un périmètre de $172$km\textsuperscript{2}.
 De la gauche vers la droite sur la seconde ligne, évolution du $NDVI$ entre $Aout$ et $Decembre$ pour la ville de $Fontainebleau$ sur un périmètre de $172$km\textsuperscript{2}. 
-En bas, supersposition des histogrammes de $NDVI$ pour les mois de $Mars$ à $Decembre$ et image couleur}
+En bas, supersposition des histogrammes de $NDVI$ pour les mois de $Mars$ à $Decembre$ et image couleur.}
 \label{fontainebleau_ndvi_annee}
 \end{figure}
 
@@ -192,7 +192,7 @@ En bas, supersposition des histogrammes de $NDVI$ pour les mois de $Mars$ à $De
 
 \section{Pour une commune montagneuse (Annecy)}
 
-Pour une commune montagneuse comme Annecy, le déplacement du mode principal en saison chaude se situe à une fréquence intermédiaire ($0.2$).
+Pour une commune montagneuse comme Annecy \ref{annecy_ndvi_annee}, le déplacement du mode principal en saison chaude se situe à une fréquence intermédiaire ($0.2$).
 
 \begin{figure}[H]
 \centerline{
@@ -226,17 +226,58 @@ Pour une commune montagneuse comme Annecy, le déplacement du mode principal en 
 \end{center}
 \caption{De la gauche vers la droite sur la première ligne, évolution du $NDVI$ entre $Mars$ et $Juillet$ pour la ville de $Annecy$ sur un périmètre de $13.65$km\textsuperscript{2}.
 De la gauche vers la droite sur la seconde ligne, évolution du $NDVI$ entre $Aout$ et $Decembre$ pour la ville de $Annecy$ sur un périmètre de $13.65$km\textsuperscript{2}. 
-En bas, supersposition des histogrammes de $NDVI$ pour les mois de $Mars$ à $Decembre$}
-\label{fontainebleau_ndvi_annee}
+En bas, supersposition des histogrammes de $NDVI$ pour les mois de $Mars$ à $Decembre$ et image couleur.}
+\label{annecy_ndvi_annee}
 \end{figure}
 
 \clearpage
 
-\section{Pour une commune littorale (Montpellier)}
+\section{Pour une commune littorale (Agde)}
 
+Pour une commune littorale comme Adge \ref{agde_ndvi_annee}, le mode principal subit une variation très légère vers les hautes fréquences en saison chaude, mais reste globalement constant dans l'année
+autour de $0.25$.
+
+\begin{figure}[H]
+\centerline{
+\includegraphics[scale=0.4]{images/Agde/03_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/04_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/05_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/06_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/07_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+}
+\centerline{
+\includegraphics[scale=0.4]{images/Agde/08_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/09_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/10_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/11_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+\includegraphics[scale=0.4]{images/Agde/12_ndvi.png}
+\includegraphics[scale=0.2]{images/colormap.png}
+}
+\begin{center}
+\includegraphics[scale=0.45]{images/Agde/all_ndvi_histo.png}
+\includegraphics[scale=0.7]{images/Agde/12_rgb.png}
+
+\end{center}
+\caption{De la gauche vers la droite sur la première ligne, évolution du $NDVI$ entre $Mars$ et $Juillet$ pour la ville de $Adge$ sur un périmètre de $50.9$km\textsuperscript{2}.
+De la gauche vers la droite sur la seconde ligne, évolution du $NDVI$ entre $Aout$ et $Decembre$ pour la ville de $Adge$ sur un périmètre de $50.9$km\textsuperscript{2}. 
+En bas, supersposition des histogrammes de $NDVI$ pour les mois de $Mars$ à $Decembre$ et image couleur}
+\label{agde_ndvi_annee}
+\end{figure}
 \clearpage
 
-Ainsi, nous avons...
+Ainsi, nous avons pu mettre en évidence divers comportements de l'indice en fonction des saisons et du paysage. On note que la distribution au mois de Juin-Juillet est 
+très dispersée. En effet, la végétation des zones faiblement urbaines (litoral, plaine, montagne) n'est pas toujours visible en dehors de la période estivale, hors c'est la
+végétation qui doit pouvoir nous renseigné sur la densité d'une zone donnée.\\
+Dans la partie qui suit, nous allons définir plusieurs catégories de commune liées à la densité de population et observer leur $NDVI$ pour la période estivale.\\
 
 \chapter{Evolution du NDVI en fonction de la densité de population}
 
@@ -261,6 +302,13 @@ Avec cette typologie, 90 \% des communes françaises sont « rurales ». L’Ins
 \item \emph{les communes très peu denses} : carreaux de densité de population d’au moins 25 habitants par km\textsuperscript{2} et moins de 300 habitants
 \end{itemize}
 }
+
+Pour chacune de ces quatres catégories, nous choisissons trois communes :
+\begin{itemize}
+ \item communes densément peuplées : $Lyon$ ($10117$habs/km\textsuperscript{2}), $Montpellier$ ($4524$habs/km\textsuperscript{2}) et $Perpignan$ ($1724$habs/km\textsuperscript{2}).
+ \item communes de densité intermédiaire : $
+\end{itemize}
+
 
 \end{quotation}
 
